Implementing actions demo.

--- a/index.html
+++ b/index.html
@@ -3,98 +3,76 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>GitHub 101</title>
+    <title>GitHub Actions Demo</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="shortcut icon" href="images/Git-Icon-White.png" />
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="images/Git-Icon-White.png"/>
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="images/GitHub-Mark-Light-32px.png" alt="octocat">  GitHub Intro</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="navitem">
-            <a class="nav-link" href="advanced.html">GitHub Advanced</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="resources.html">Additional Resources</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="index.html"><img src="images/GitHub-Mark-Light-32px.png" alt="octocat"> GitHub
+            Demo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
-  <!-- Page Content -->
-  <div class="container">
+<!-- Page Content -->
+<div class="container">
     <div class="row">
-      <div class="col-lg-12">
-        <h1 class="mt-5 text-center">Introduction to GitHub</h1>
-        <p class="lead">The goal of this resource is to provide access to all materials discussed during the Introduction to GitHub presentation.</p>
-        <p class="lead">First, let it be known that I am not a web developer, so I apologize for the rudimentary website. However, it is my hope that
-        this presentation gets you what you need to start contributing to either your own project stashed in a repository on your favorite platform,
-        or empowers you to start contributing to your favorite open-source project. I have no intention to take this down, so feel free to bookmark
-        this site to use at your leisure (and feel free to send me links you think belong in the resource list!).</p>
-        <br />
-        <h5>Initial Downloads</h5>
-        <ul class="list-unstyled">
-          <li><a href="https://git-scm.com/downloads">git-scm</a></li>
-          <li><a href="https://desktop.github.com/">GitHub Desktop</a></li>
-          <li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
-        </ul>
-        <h5>Lab 1 Commands</h5>
-        <h6>Part 1</h6>
-        <ul class="list-unstyled">
-          <ul>- Do not copy the $ symbol, this just denotes a clean line in either git-bash or terminal that is ready for commands -</ul>
-          <ul>$ git config --global user.email "MyEmail@Email.com"</ul>
-          <ul>$ git config --global user.name "My Name"</ul>
-          <ul>$ git config -l</ul>
-          <ul>- Confirm that your email and name are in place in the config -</ul>
-        </ul>
-        <h6>Part 2</h6>
-        <ul class="list-unstyled">
-          <ul>- IMPORTANT: Do not just copy and paste this command, this will be the URL that will be in the Clone or Download button -</ul>
-          <ul>$ git clone https://github.com/{your user name}/{your repo-name}.git</ul>
-          <ul>$ git branch example-branch</ul>
-          <ul>$ git checkout example-branch</ul>
-          <ul>- Here we will make a change to the README.md file -</ul>
-          <ul>$ git status</ul>
-          <ul>- Make sure that the changes made show as green and ready for commit -</ul>
-          <ul>$ git commit -m "Updating README.md file"</ul>
-          <ul>$ git push</ul>
-        </ul>
-        <h5>Lab 2 Commands</h5>
-        <ul class="list-unstyled">
-          <ul>As this lab is done within GitHub Desktop, we will not have command-line commands for the lab</ul>
-        </ul>
-        <br />
-        <br />
-        <h5>Presentation Slides</h5>
-        <p><a href="resources/Introduction%20to%20github.pptx">Introduction to GitHub - PowerPoint</a></p>
-      </div>
+        <div class="col-lg-12">
+            <h1 class="mt-5 text-center">GitHub Actions Demo Website</h1>
+<!--            <div class="text-center">-->
+<!--                <p><img src="resources/original.png" alt="original octocat"/></p>-->
+<!--            </div>-->
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas facilisis dui non nunc
+                condimentum tempus. Integer porta in risus eu malesuada. Nullam ultricies lacus in imperdiet dictum.
+                Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin semper orci
+                quam, id posuere dui consequat vel. Suspendisse leo ante, pharetra ac magna id, lobortis laoreet est.
+                Nulla ut varius ipsum, nec congue lorem. Sed tincidunt risus ex. Vivamus dignissim elementum iaculis.
+                Cras scelerisque convallis lacinia.</p>
+            <p class="lead">Sed iaculis pulvinar ante, sit amet rhoncus urna venenatis quis. Donec diam velit, fringilla
+                at nunc eget, consectetur semper nisl. Curabitur nec elit justo. Cras molestie mattis mauris. Nullam
+                eleifend arcu et metus finibus vestibulum. Morbi interdum scelerisque tempus. Quisque et lacus quis leo
+                rhoncus congue non at tortor. Nulla facilisi. Sed vitae mollis leo. Aenean iaculis et elit ut fermentum.
+                Phasellus magna sem, dictum vel consectetur ac, placerat sit amet nulla. Phasellus facilisis eget nibh
+                sed tincidunt. Phasellus maximus porta justo, sit amet sodales sapien feugiat ornare. Phasellus
+                efficitur nulla vitae dolor varius, eget vulputate magna rhoncus. Aliquam eu nisl venenatis, eleifend
+                massa nec, laoreet eros.</p>
+            <p class="lead">Aliquam erat volutpat. Morbi at eleifend ligula. In risus sapien, pulvinar nec justo id,
+                commodo sagittis augue. Ut maximus porta velit, at condimentum dolor interdum at. Quisque pulvinar
+                lobortis pharetra. Vestibulum ut tellus vitae est varius euismod vel quis turpis. Aliquam luctus
+                malesuada tincidunt. Vestibulum ultricies dui sed velit suscipit venenatis. Fusce quis gravida augue.
+                Duis tristique non lorem id bibendum. Nulla facilisi. Donec vulputate vitae orci in accumsan. Mauris sed
+                ante risus.</p>
+        </div>
     </div>
-  </div>
+</div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.slim.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
