Removed comments from index.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="mt-5 text-center">GitHub Actions Demo Website</h1>
-<!--            <div class="text-center">-->
-<!--                <p><img src="resources/original.png" alt="original octocat"/></p>-->
-<!--            </div>-->
+            <div class="text-center">
+                <p><img src="resources/original.png" alt="original octocat"/></p>
+            </div>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas facilisis dui non nunc
                 condimentum tempus. Integer porta in risus eu malesuada. Nullam ultricies lacus in imperdiet dictum.
                 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin semper orci
